force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/CD_Rate__c.field-meta.xml
<CustomField>
    <fullName>CD_Rate__c</fullName>
    <label>CD Rate</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>