force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/Discount_Adjusters__c.field-meta.xml
<CustomField>
    <fullName>Discount_Adjusters__c</fullName>
    <label>Discount Adjusters</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>