force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/Pricing_Matrix_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Matrix_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Matrix Lookup</label>
    <referenceTo>LLC_BI__Pricing_Matrix__c</referenceTo>
    <relationshipLabel>Pricing Options</relationshipLabel>
    <relationshipName>Pricing_Options</relationshipName>
    <type>Lookup</type>
</CustomField>